# coffee-with-claude

./: .dockerignore  .gitignore  CLAUDE.md  pyproject.toml
app/: main.py
app/models/: joke.py
app/routes/: jokes.py
app/services/: joke_service.py
docs/: api.md  architecture.md  contributing.md
tests/: test_joke_service.py  test_jokes_route.py
